--- a/app/templates/main/watch.html
+++ b/app/templates/main/watch.html
@@ -71,6 +71,21 @@
                             <span>{{ video.created_at.strftime('%B %d, %Y') }}</span>
                             <span>•</span>
                             <span>{{ video.quality }}</span>
+                            {% if video.quality == 'premium' %}
+                            <span class="flex items-center text-green-600">
+                                <svg class="w-4 h-4 mr-1" fill="currentColor" viewBox="0 0 20 20">
+                                    <path fill-rule="evenodd" d="M9.383 3.076A1 1 0 0110 4v12a1 1 0 01-1.617.794L4.5 14H2a1 1 0 01-1-1V7a1 1 0 011-1h2.5l3.883-2.794a1 1 0 011.617.794zM12.293 7.293a1 1 0 011.414 0L15 8.586l1.293-1.293a1 1 0 111.414 1.414L16.414 10l1.293 1.293a1 1 0 01-1.414 1.414L15 11.414l-1.293 1.293a1 1 0 01-1.414-1.414L13.586 10l-1.293-1.293a1 1 0 010-1.414z" clip-rule="evenodd"></path>
+                                </svg>
+                                AI Audio
+                            </span>
+                            {% else %}
+                            <span class="flex items-center text-gray-500">
+                                <svg class="w-4 h-4 mr-1" fill="currentColor" viewBox="0 0 20 20">
+                                    <path fill-rule="evenodd" d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z" clip-rule="evenodd"></path>
+                                </svg>
+                                No Audio
+                            </span>
+                            {% endif %}
                             {% if video.duration %}
                             <span>•</span>
                             <span>{{ video.duration }}s</span>
